tdf#90029: FM_PROP_DATE/TIME confusion

Change-Id: If711a3d4b431e9919bbf6edf7756d82414f380a7